--- a/.classpath
+++ b/.classpath
@@ -17,5 +17,5 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/classes"/>
-	<classpathentry kind="output" path="target/classes"/>
+	<classpathentry kind="output" path="WebContent/WEB-INF/classes"/>
 </classpath>
